bynkc/tests/fixtures/positive/60_uses_multiple/src/a/main.bynk
commons a

type Alpha = Int where Positive
