bynkc/tests/fixtures/negative/48_uses_name_conflict/src/b/main.bynk
commons b

type Conflict = String where NonEmpty
